# OpenXlate

./: Cargo.toml  README.md  config.json
crates/xlate-anthropic/: Cargo.toml
crates/xlate-anthropic/src/: cache.rs  lib.rs  messages.rs  stream.rs  types.rs
crates/xlate-core/: Cargo.toml
crates/xlate-core/src/: capability.rs  config.rs  error.rs  event.rs  hook.rs  inbound.rs  kernel.rs  lib.rs  message.rs  plugin.rs  pricing.rs  provider.rs  registry.rs  router.rs  sanitize.rs  stats.rs  store.rs  supervisor.rs  think_tag.rs  types.rs
crates/xlate-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/xlate-ffi/src/: lib.rs  panic_guard.rs  runtime.rs  stream.rs
crates/xlate-hooks/: Cargo.toml
crates/xlate-hooks/src/: affinity.rs  alert.rs  billing.rs  cache_stats.rs  circuit_breaker.rs  cost_calc.rs  latency.rs  lib.rs  media_sanitizer.rs  model_map.rs  param_heal.rs  patch.rs  rate_limit.rs  rectifier.rs  sanitize.rs  think_tag.rs  trace.rs  usage.rs
crates/xlate-openai/: Cargo.toml
crates/xlate-openai/src/: chat_completions.rs  endpoint.rs  idle_watchdog.rs  lib.rs  messages.rs  responses.rs  responses_messages.rs  think_tag.rs  thinking_disable.rs
crates/xlate-pricing/: Cargo.toml
crates/xlate-pricing/src/: catalog.rs  fetch.rs  lib.rs  service.rs
crates/xlate-store/: Cargo.toml
crates/xlate-store/src/: lib.rs  memory.rs  sqlite.rs
crates/xlate-test/: Cargo.toml
crates/xlate-test/src/: lib.rs  mock_provider.rs
crates/xlate-test/src/fixtures/: anthropic_messages_request.json  minimal_request.json  openai_chat_request.json
crates/xlate-token/: Cargo.toml
crates/xlate-token/src/: lib.rs
