[package]
name = "xlate-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C ABI foreign function interface for the xlate kernel"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
xlate-core = { path = "../xlate-core" }
xlate-openai = { path = "../xlate-openai" }
xlate-anthropic = { path = "../xlate-anthropic" }
xlate-hooks = { path = "../xlate-hooks" }
xlate-store = { path = "../xlate-store" }
xlate-pricing = { path = "../xlate-pricing" }
tokio.workspace = true
serde_json.workspace = true
once_cell.workspace = true
tracing.workspace = true
async-trait.workspace = true
arc-swap.workspace = true

[build-dependencies]
cbindgen = "0.28"
