[package]
name = "xlate-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standard hook implementations for the xlate microkernel"

[dependencies]
xlate-core = { path = "../xlate-core" }
xlate-token = { path = "../xlate-token" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
dashmap.workspace = true
glob-match.workspace = true
rust_decimal.workspace = true
