[package]
name = "xlate-openai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenAI-compatible provider adapter for xlate-core"

[dependencies]
xlate-core = { path = "../xlate-core" }
async-trait.workspace = true
bytes = "1"
reqwest.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
base64.workspace = true
