[package]
name = "xlate-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage backend implementations for the xlate microkernel"

[dependencies]
xlate-core = { path = "../xlate-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
rusqlite.workspace = true
