[package]
name = "xlate-test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integration test harness for the xlate kernel"

[dependencies]
xlate-core = { path = "../xlate-core" }
xlate-hooks = { path = "../xlate-hooks" }
xlate-store = { path = "../xlate-store" }
xlate-pricing = { path = "../xlate-pricing" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
